fix join us spacing

--- a/components/Home/FAQJoinUs/FAQJoinUs.module.scss
+++ b/components/Home/FAQJoinUs/FAQJoinUs.module.scss
@@ -9,7 +9,7 @@
     color: #3a464f;
     width: 40%;
     top: 35vw;
-    right: 10vw;
+    right: 6vw;
 
     h1 {
         font-size: 5vw;
@@ -45,53 +45,13 @@
 }
 
 .x {
-    top: 450px;
-    left: 34%;
-
-    @media screen and (max-width: 1600px) {
-        top: 430px;
-    }
-
-    @media screen and (max-width: 1152px) {
-        top: 350px;
-    }
-
-    @media screen and (max-width: 768px) {
-        top: 150px;
-    }
-
-    // @media screen and (max-width: 1600px) {
-    //     top: 750px;
-    // }
-
-    // @media screen and (max-width: 1152px) {
-    //     top: 500px;
-    // }
-
-    // @media screen and (max-width: 768px) {
-    //     top: 180px;
-    // }
-
-    // @media screen and (max-width: 400px) {
-    //     top: 200px;
-    // }
+    top: 50vw;
+    left: 34vw;
 }
 
 .instagram {
-    top: 300px;
-    left: 27%;
-
-    @media screen and (max-width: 1600px) {
-        top: 300px;
-    }
-
-    @media screen and (max-width: 1152px) {
-        top: 220px;
-    }
-
-    @media screen and (max-width: 768px) {
-        top: 100px;
-    }
+    top: 30vw;
+    left: 25%;
 }
 
 .background {
@@ -121,46 +81,6 @@
         align-items: center;
         justify-content: center;
     }
-
-    // @media screen and (max-width: 1152px) {
-    //     bottom: 165px;
-    //     right: 155px;
-    //     gap: 1rem;
-
-    //     h1 {
-    //         font-size: 32px;
-    //     }
-    // }
-
-    // @media screen and (max-width: 768px) {
-    //     bottom: 85px;
-    //     right: 75px;
-    //     gap: 1rem;
-
-    //     h1 {
-    //         font-size: 14px;
-    //     }
-    // }
-
-    // @media screen and (max-width: 400px) {
-    //     bottom: 85px;
-    //     right: 65px;
-    //     gap: 1rem;
-
-    //     h1 {
-    //         font-size: 14px;
-    //     }
-    // }
-
-    // @media screen and (max-width: 370px) {
-    //     bottom: 70px;
-    //     right: 60px;
-    //     gap: 1rem;
-
-    //     h1 {
-    //         font-size: 14px;
-    //     }
-    // }
 }
 
 .faq {
